# nask_task

./: .env.sample  .gitignore  .pre-commit-config.yaml  README.md  app.py  docker-compose.yaml  pyproject.toml
.docker/: Dockerfile.fastapi
app/: main.py
app/core/: celery_app.py  config.py  database.py
app/models/: task.py
app/services/: task_service.py
app/tasks/: long_task.py
