[project]
name = "nask-task"
version = "0.1.0"
description = ""
authors = [
    {name = "Bartosz Moczulski",email = "bl.moczulski@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
