[project]
name = "nask-task"
version = "0.1.0"
description = ""
authors = [
    {name = "Bartosz Moczulski", email = "bl.moczulski@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "pre-commit (>=4.2.0,<5.0.0)",
    "celery (>=5.5.2,<6.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "redis (>=6.1.0,<7.0.0)",
    "sqlalchemy[asyncio] (>=2.0.41,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "aiohttp (>=3.11.18,<4.0.0)",
    "sse-starlette (>=2.3.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
